# reflection

./: .gitmodules  CMakeLists.txt  README.md  libraries_list.txt  reflection.cmake  tools_list.txt
.github/workflows/: main.yaml
include/reflection/: class_info.h  cpp_function.h  cpp_parameters.h  cpp_property.h  cpp_static_function.h  function_info.h  function_parameters.h  object_constructor.h  object_instance.h  property_info.h  reflection.h  reflection_class_info.h  register.h  register_class.h  register_class_info.h  register_function.h  register_static_function.h  static_function_info.h
src/: class_info.cpp  function_info.cpp  function_parameters.cpp  object_instance.cpp  property_info.cpp  reflection.cpp  static_function_info.cpp
test/: class_info_tests.cpp  reflection_tests.cpp
tools/generate_reflection/: CMakeLists.txt  vcpkg_list.txt
tools/generate_reflection/src/: main.cpp
